fix cloudformation template

--- a/pipeline.yaml
+++ b/pipeline.yaml
@@ -56,7 +56,7 @@ Resources:
       Source:
         Type: GITHUB
         Location: 'https://github.com/mbelgiovine/github-aws-cicd.git'
-        BuildSpec: buildspec.yml
+        BuildSpec: buildspec.yaml
         Auth:
           Type: OAUTH
           Resource: !Ref CodeBuildSourceCredential
